# leptos-explorer

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  esbuild.js  package.json  pnpm-lock.yaml
.github/workflows/: vscode-publish.yml
leptos-explorer/: .gitignore  Cargo.toml  package.json
leptos-explorer/src/: lib.rs
leptos-explorer/src/folding_range/: collect_folding_range.rs  collect_macros.rs  mod.rs  view_macro.rs
src/: extension.ts  ffi.ts  foldingProvider.ts
