[package]
publish = false
name = "leptos-explorer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
syn = { version = "2.0.76", features = ["visit", "full", "extra-traits"] }
proc-macro2 = { version = "1.0.86", features = ["span-locations"] }
crop = "0.4.2"
rstml = "0.12.0"

napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = { version = "2.12.2", default-features = false }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
